--- a/tidyverse_packages/dplyr.Rmd
+++ b/tidyverse_packages/dplyr.Rmd
@@ -2,7 +2,7 @@
 title: "Unpacking the Tidyverse - dplyr"
 author: "Fisher Ankney"
 date: "February 18, 2018"
-output: html_document
+output: md_document
 ---
 
 <br> 
@@ -13,7 +13,7 @@ This is the third of eight installments of my *Unpacking the Tidyverse* series. 
 
 When it comes to data wrangling, the best teacher is experience. Only through hours of using dplyr will you become proficient with it. Many professional data scientists report that more than 80% of their time is spent data wrangling, so there is endless opportunity to practice with dplyr! 
 
-dplyr is by far the largest tidyverse package, it contains countless functions to help with all of your data wrangling needs. In this post, I'll focus on the three families of dplyr functions that I find the most useful: the five data-wrangling verbs, six types of data joins, and an assortment of helper functions. 
+dplyr is by far the largest tidyverse package, it contains countless functions to help with all your data wrangling needs. In this post, I'll focus on the three families of dplyr functions that I find the most useful: the five data-wrangling verbs, six types of data joins, and an assortment of helper functions. 
 
 <br> 
 
@@ -35,7 +35,7 @@ filter()       # select rows based on value
 arrange()      # sort rows based on values 
 select()       # zoom in on specified columns
 mutate()       # create new variables from existing ones 
-summarize()    # collapse dataframe to single summary
+summarize()    # collapses a data frame into a single summary
 group_by()     # analyze by specified group, useful for summarize 
 %>%            # connecting pipe, read as "then"
 ```
@@ -45,12 +45,12 @@ group_by()     # analyze by specified group, useful for summarize
 #### Two-Table Functions
 
 ```{r, eval=F}
-inner_join()   # 
-full_join()    # 
-left_join()    #
-right_join()   #
-semi_join()    #
-anti_join()    #
+left_join()     # retains all data from left table, includes matching data from right
+right_join()   # retains all data from right table, includes matching data from left
+inner_join()   # retains only the data that is present in both tables
+full_join()    # combines both tables completely 
+semi_join()    # retains observations in the left table that have a match in the right table
+anti_join()    # retains observations in the left table that do not have a match in the right table
 ```
 
 <br> 
@@ -60,30 +60,25 @@ anti_join()    #
 transmute()    # create new variables from existing ones, remove existing variables
 ungroup()      # literally the name
 desc()         # descending order (large to small, z to a)
-count()        # simple function counting entries in a variable
-n()            # number of entries
-lag()          # offset, allows to refer to lagging (-1) value
-lead()         # offset, allows to refer to leading (+1) value
-starts_with()  # 
-ends_with()    #
-contains()     #
-matches()      #
-num_range()    #
-bind_rows()    #
-bind_cols()    # 
-rename()       # 
-select()       # 
-tally()        # 
+tally()		# sums the number of entries in a dataset
+count()        # groups then sums the number of entries 
+n_distinct()            # sums the number of unique values in a dataset
+starts_with()  # used with select, match entries that start with a string
+ends_with()    # used with select, match entries that end with a string
+contains()     # used with select, match entries that contain a string
+matches()      # used with select, match entries with a regular expression
+num_range()    # used with select, match a number between defined range
+bind_rows()    # combines two data frames according to similar rows
+bind_cols()    # combines two data frames according to similar columns
+rename()       # renames columns
 first()        # the first element of vector x
 last()         # the last element
 nth()          # the nth element 
-n()            # the number of rows in the dataframe that summarise() describes
-n_distinct()   # number of unique values in vector x 
 ```
 
 <br  />
 
-I've broken down this post on dplyr into three distinct sections - Data Manipulation Verbs, Two-Table Functions, and Data Wrangling Functions. The first section, data maniulation verbs, covers what I believe are the six most important functions in dplyr along with "then" pipe. If you only read one section of this post, I suggest you make it this section. Also of importance are the two-table functions introduced in dplyr. These six "join" functions allow the user complete control when combining multiple datasets. Finally, the data wrangling functions are functions that I've found useful in niche cases while exploring and analyzing datasets. This isn't a complete list of data wrangling functions in dplyr, they're just functions that I've personally found useful in my projects thus far. 
+I've broken down this post on dplyr into three distinct sections - data manipulation verbs, two-table functions, and data wrangling functions. The first section, data manipulation verbs, covers what I believe are the six most important functions in dplyr along with "then" pipe. If you only read one section of this post, I suggest you make it this section. Also of importance are the two-table functions introduced in dplyr. These six "join" functions allow the user complete control when combining multiple datasets. Finally, the data wrangling functions are functions that I've found useful in niche cases while exploring and analyzing datasets. This isn't a complete list of data wrangling functions in dplyr, they're just functions that I've personally found useful in my projects thus far. 
 
 To demonstrate the power of dplyr, we'll be working with the flights dataset loaded from `library(nycflights13)`. Flights is a large and diverse dataset, containing 19 variables and over 335,000 observations. Flights gives on-time data for all flights that departed from the three airports associated with New York City in 2013. 
 
@@ -97,7 +92,7 @@ flights
 
 #### Filter
 
-`filter()` is a simple function that finds, or 'filters' observations that match true to a declared condition. In this example `filter()` first's argument is the flights dataset, the following arguments declare the conditions to be met. Retain observations (rows) with the months variable equal to 12, and the day variable equal to 25. The result is a dataframe with 719 flights that departed New York City on Christmas Day, 2013. 
+`filter()` is a simple function that finds, or 'filters' observations that match true to a declared condition. In this example `filter()` first's argument is the flights dataset, the following arguments declare the conditions to be met. Retain observations (rows) with the months variable equal to 12, and the day variable equal to 25. The result is a data frame with 719 flights that departed New York City on Christmas Day, 2013. 
 
 ```{r}
 filter(flights, month == 12 & day == 25)
@@ -107,7 +102,7 @@ filter(flights, month == 12 & day == 25)
 
 #### Arrange
 
-Often observations within a dataframe are ordered arbitrarily, or unproductively. `arrange()` reorders observations according to its user specified arguments. In this example, the flights dataframe is called upon as the first argument once again; this is common syntax within dplyr functions and I won't be referencing it henceforth. The second argument is `desc(dep_time)`. `desc()` is one of the secondary functions listed previously; it simply transforms a vector into a format that will be sorted in descending order. `dep_time` is the flights variable departure time, a number from 0000 to 2400, indicating the actual departure time of an individual aircraft. The resulting dataframe has all 336,776 observations sorted from latest (highest) to earliest (lowest) departure time. 
+Often observations within a data frame are ordered arbitrarily, or unproductively. `arrange()` reorders observations according to its user specified arguments. In this example, the flights data frame is called upon as the first argument once again; this is common syntax within dplyr functions and I won't be referencing it henceforth. The second argument is `desc(dep_time)`. `desc()` is one of the secondary functions listed previously; it simply transforms a vector into a format that will be sorted in descending order. `dep_time` is the flights variable departure time, a number from 0000 to 2400, indicating the actual departure time of an individual aircraft. The resulting data frame has all 336,776 observations sorted from latest (highest) to earliest (lowest) departure time. 
 
 
 ```{r}
@@ -118,7 +113,7 @@ arrange(flights, desc(dep_time))
 
 #### Select
 
-In a dataframe with numerous variables it's easy become overwhelmed and broad with analysis. `select()` reduces the number of variables in a dataframe, only keeping variables that the user inputs as arguments. In this example, flights are reduced from 19 variables to the variables year, month and day. 
+In a data frame with numerous variables it's easy become overwhelmed and broad with analysis. `select()` reduces the number of variables in a data frame, only keeping variables that the user inputs as arguments. In this example, flights are reduced from 19 variables to the variables year, month and day. 
 
 ```{r}
 select(flights, year:day)
@@ -154,7 +149,7 @@ summarize(flights, delay = mean(dep_delay, na.rm = TRUE))
 
 #### Group By
 
-`summarize()` becomes extremely useful when paired with the final primary dplyr function, `group_by()`. `group_by()` changes the unit of analysis from the complete dataset to an individual group, thus changing the scope of summarize. In the above example, the flights dataset is grouped by the dest variable, destination. Grouping by destination by itself does nothing to the dataframe, so the then pipe, %>%, is used to push the output to the `summarize()` function. Summarize first creates a count variable that is equivalent to the function `n()`. `n()` is another one of those secondary dplyr functions that often comes in handy; `n()` is a function that finds the number of observations in the current group. Next, `summarize()` creates a variable named distance based off the mean distance travelled by each observation, as grouped by destination. Finally, `summarize()` creates a variable named delay, based off the mean arrival delay each observation experienced, as grouped by destination. The resulting dataframe gives excellent insight into each of the 105 destinations present in the flights dataset. 
+`summarize()` becomes extremely useful when paired with the final primary dplyr function, `group_by()`. `group_by()` changes the unit of analysis from the complete dataset to an individual group, thus changing the scope of summarize. In the above example, the flights dataset is grouped by the `dest` variable, destination. Grouping by destination by itself does nothing to the data frame, so the then pipe, %>%, is used to push the output to the `summarize()` function. Summarize first creates a count variable that is equivalent to the function `n()`. `n()` is another one of those secondary dplyr functions that often comes in handy; `n()` is a function that finds the number of observations in the current group. Next, `summarize()` creates a variable named distance based off the mean distance travelled by each observation, as grouped by destination. Finally, `summarize()` creates a variable named delay, based off the mean arrival delay each observation experienced, as grouped by destination. The resulting data frame gives excellent insight into each of the 105 destinations present in the flights dataset. 
 
 
 ```{r}
@@ -187,7 +182,7 @@ denver_xmas_delay                                         # print results
 
 There are two types of two-table joining functions, mutating joins and filtering joins. Mutating joins allow you to add new variables from one table to matching observations in another table. these functions are `left_join()`, `right_join()`, `inner_join()`, and `outter_join()`. Filtering Joins filter observations from one table based on matched observations in the secondary table; these two functions are `semi_join()` and `anti_join()`. 
 
-All six of the join functions are structure for the first arguements to be `x` and `y`. These are the tables that are combined or filtered; the output always takes the same structure as the left table, `x`. The third arguement, `by` defines the "key", a column that occurs in both tables that you want to join. They key in the first table is declared the "primary key", the key in the second table is declared the secondary, or foreign key. The Primary key must uniquely ID each row in the first dataset, but not necissarly the second dataset. This means in some cases that the primary key is more than one column. 
+All six of the join functions are structure for the first arguments to be `x` and `y`. These are the tables that are combined or filtered; the output always takes the same structure as the left table, `x`. The third argument, `by` defines the "key", a column that occurs in both tables that you want to join. They key in the first table is declared the "primary key", the key in the second table is declared the secondary, or foreign key. The Primary key must uniquely ID each row in the first dataset, but not necessary the second dataset. This means in some cases that the primary key is more than one column. 
 
 They trick to understanding the six join functions is understanding how to use the key values. Let's get started with the most popular function, `left_join()`. 
 
@@ -195,7 +190,7 @@ They trick to understanding the six join functions is understanding how to use t
 
 #### Left Join 
 
-The `left_join()` function keeps all observations in your left table (arguement `x`). Your primary table will never lose observations when using left join, it will only gain additional observations from the right table (arguement `y`) based on the defined key. 
+The `left_join()` function keeps all observations in your left table (argument `x`). Your primary table will never lose observations when using left join, it will only gain additional observations from the right table (argument `y`) based on the defined key. 
 
 Here we'll set up a simple example tibbles - 
 ```{r}
@@ -214,7 +209,7 @@ left_join(tib_1, tib_2, by = "x")
 
 <br> 
 
-When you don't list a `by` arguement, dplyr finds the key columns on it's own, most of the time it's right, but not always. 
+When you don't list a `by` argument, dplyr finds the key columns on its own, most of the time it's right, but not always. 
 
 ```{r}
 left_join(tib_1, tib_2)
@@ -235,7 +230,7 @@ right_join(tib_1, tib_2)
 
 #### Inner Join
 
-`inner_join()` is simple, it only includes observations that are present in both `x` and `y`. Every row must be present in both datasets. With the key `by = "x"`, only one row is present in both of these example tibbles. 
+`inner_join()` is simple, it only includes observations that are present in both `x` and `y`. Every row must be present in both datasets. With the key `by = "x"`, only one row is present in both example tibbles. 
 
 ```{r}
 inner_join(tib_1, tib_2, by = "x")
@@ -255,7 +250,7 @@ full_join(tib_1, tib_2, by = "x")
 
 #### Semi Join
 
-The first of two filter joins, `semi_join()`, keeps all observations in the `x` arguement that have a match in the `y` arguement. In this example, the key is the "x" column of `tib_1`; the only row that matches in `tib_2` is the observation x = 1. Thus, the resulting semi_join only has one observation filtered from `tib_1`. 
+The first of two filter joins, `semi_join()`, keeps all observations in the `x` argument that have a match in the `y` argument. In this example, the key is the "x" column of `tib_1`; the only row that matches in `tib_2` is the observation x = 1. Thus, the resulting semi_join only has one observation filtered from `tib_1`. 
 
 ```{r}
 semi_join(tib_1, tib_2, by = "x")
@@ -278,29 +273,29 @@ anti_join(tib_1, tib_2)
 <br>
 
 #### `transmute()`  
-Technically a data manipulation verb, transmute adds a new variable to the data structure, just like mutate. The difference between transmute and mutate is that mutate preserves the pre-existing variabes while transmute drops them. Usage arguements are exactly the same as mutate. 
+Technically a data manipulation verb, transmute adds a new variable to the data structure, just like mutate. The difference between transmute and mutate is that mutate preserves the pre-existing variables while transmute drops them. Usage arguments are the same as mutate. 
 
 #### `ungroup()` 
 After using the function `group_by()` data operations are performed on the groups defined by this functions output. Ungroup will undo the effects of `group_by()`, allowing for verbs like `summarize()` to once again be conducted on the entire dataset. 
 
 
 #### `desc()`
-When using the data wrangling verb `arrange()`, dplyr automatically sorts a datasets observations alphanumerically. If, for instance, you wanted to arrange a set of values from highest to lowest, you must use the `desc()` function inside arrange. I eximplify `desc()` in the `arrange()` example code above. 
+When using the data wrangling verb `arrange()`, dplyr automatically sorts a datasets observations alphanumerically. If, for instance, you wanted to arrange a set of values from highest to lowest, you must use the `desc()` function inside arrange. I exemplify `desc()` in the `arrange()` example code above. 
 
 #### `tally()`   
-`tally()` is short hand for the function `summarize()`. The function simply calls the `n()` function, which defines the number of entries in your `x` arguement. If you're calling `tally()` multiple times for a single dataset, it will call `sum(n)`, and create a cumulative tally. `tally()` will takes an `x` arguement and optionally a `wt` and `sort` arguement. `x` is the table to count, `wt` allows for a weighted tally through the defined variable `wt`, and `sort` will sort the output in descending order of n if left as TRUE. 
+`tally()` is short hand for the function `summarize()`. The function simply calls the `n()` function, which defines the number of entries in your `x` argument. If you're calling `tally()` multiple times for a single dataset, it will call `sum(n)`, and create a cumulative tally. `tally()` will takes an `x` argument and optionally a `wt` and `sort` argument. `x` is the table to count, `wt` allows for a weighted tally through the defined variable `wt`, and `sort` will sort the output in descending order of n if left as TRUE. 
 
 #### `count()`
-A very similiar function to `tally()`, `count()` calls `group_by()` before performing the tally, then calls `ungroup()` once it's complete. 
+A very similar function to `tally()`, `count()` calls `group_by()` before performing the tally, then calls `ungroup()` once it's complete. 
 
 #### `n_distinct()` 
 number of unique values in vector x 
 
 #### `starts_with()` 
-Useful with the `select()` data wrangling verb, `starts_with()` allows you to select data entries that start with a defined prefix. The first arguement is a string that you want to match within the dataset; the second arguement is `ignore.case` which defaults to TRUE. 
+Useful with the `select()` data wrangling verb, `starts_with()` allows you to select data entries that start with a defined prefix. The first argument is a string that you want to match within the dataset; the second argument is `ignore.case` which defaults to TRUE. 
 
 #### `ends_with()`    
-Similiar to `starts_with()`, this verb allows you to select entries from a dataset that end with a defined string. 
+Similar to `starts_with()`, this verb allows you to select entries from a dataset that end with a defined string. 
 
 #### `contains()`     
 Allows you to `select()` data entries that contain a defined literal string anywhere within them. 
@@ -309,70 +304,42 @@ Allows you to `select()` data entries that contain a defined literal string anyw
 Allows you to `select()` data entries that match a regular expression anywhere within them. 
 
 #### `num_range()`   
-Allows you to `select()` data entries that contain a defined range of numbers given as the first arguement in `num_range()`. 
+Allows you to `select()` data entries that contain a defined range of numbers given as the first argument in `num_range()`. 
 
 #### `bind_rows()`    
+An efficient implementation of base R's `rbind()` function, `bind_rows()` takes data frames as arguments and combines the rows, or observations, according to the columns they have in common. 
 
 #### `bind_cols()`     
-
+`bind_rows()` counterpart, `bind_cols()` also takes data frames as arguments and combines them column-wise according to their common observations. 
 
 #### `rename()`        
-
+`rename()` does exactly what it's name suggest, taking a dataset as its first argument, and an expression defining the new names based on the old names as its second argument. for example, to rename multiple columns you would write a statement like `rename(data, c(new_name_1, new_name_2) = c(old_name_1, old_name_2))`. 
 
 #### `first()`
-the first element of vector x
+A simple wrapper that will select and return the value that occupies the first slot in a data structure. The first and only argument defines the data structure. 
 
 #### `last()`
-the last element
+A simple wrapper that will select and return the value that occupies the last slot in a data structure. The first and only argument defines the data structure. 
 
-
+#### `nth()`
+A simple wrapper than will select and return the value that occupies the nth slot in a data structure. The first argument defines the data structure and the second argument defines the nth slot. 
 
 <br> 
-<br> 
-<br> 
-
-union() provides an easy way to combine two datasets without duplicating any values 
-intersect() set operator equivalent for semi-join, what you would use if your datasets have the exact same variables. 
-
-setdiff() does the same thing as anti_join() but uses every column as a key 
-
-setequal() to check if two datasets contain the same rows in any order, returns T/F
-
-bind_rows() - I really dont understand the .id arguement, useful for turning lists into one large table or dataframe
-bind_cols() 
-
-data_frame() 
-as_data_frame() - turns lists into dataframe
-
-dplyr doesnt coerce data, except for factors, but gives warning
-
-rownames_to_column(name of dataframe, name of new column to add) - might be useful
-
-also colorRampPalette() can be a pretty fun RColorBrewer Tool  :) 
-
-rename(data, new_name = old_data) - very useful 
-
-you can use select() to rename columns with an equals 
-
-reduce function from purrr
-
-tables <- list(surnames, first, middle) 
-
-reduce(tables, left_join, by = "name")
-
-tally() counts things
-
-
-
 
 ### Additional Resources 
 
-- a 
-- b 
-- c 
+- [R For Data Science Chapter 5](http://r4ds.had.co.nz/transform.html)
+- [R For Data Science Chapter 13](http://r4ds.had.co.nz/relational-data.html)
+- [CRAN Dplyr Documentation](https://cran.r-project.org/web/packages/dplyr/dplyr.pdf)
+- [CRAN Introduction to Dplyr](https://cran.r-project.org/web/packages/dplyr/vignettes/dplyr.html)
+- [CRAN Two Table Verbs](https://cran.r-project.org/web/packages/dplyr/vignettes/two-table.html)
+- [R Studio Data Wrangling Cheat Sheet](https://www.rstudio.com/wp-content/uploads/2015/02/data-wrangling-cheatsheet.pdf)
 
-Dplyr can often be a frustrating package to work with, but once you've become proficient at data wrangling, Hadley Wickham's package becomes near indispensable. Hopefully this reference guide can help you on your journey to mastering dplyr and data wrangling with R. Stay tuned for part four of the six part R4DS summary series, tidy data with tidyr. 
+<br> 
+
+Data Wrangling can sometimes be a frustrating process, and it often takes up so much time that the task seems endless. dplyr makes the task easier, but not simple. It takes hours of practice to get “good” at data wrangling, I'm certainly not there yet. Hopefully this short reference guide exposed you to an interesting function, or clarified how to use a wrangling verb for you. Stay tuned for part four of this eight part series, *Unpacking the Tidyverse - tidyr*. 
 
 Until next time, <br  />
 \- Fisher
+
 
